Fix an issue where code in header tags was too small

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -291,7 +291,6 @@ code,
 tt {
   padding: .1em .2em;
   margin: 0;
-  font-size: $small-font-size;
   background-color: rgba(175,184,193,0.2);
   border-radius: 0.2em;
 }
